# ai-reference-models

./: .bandit.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Contribute.md  DepositContract_compData.json  Free Backlinks Checker.csv  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  eth2_2023_07_01_UTC_daily.csv  poetry-install.py  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
datasets/cloud_data_connector/samples/interoperability/: Interoperability.ipynb  README.md  migrate_files_example.ipynb  pyproject.toml  requirements.txt  sample.env  setup.ps1  setup.sh
datasets/data_connector/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
datasets/data_connector/conda/: description.md  pacakges.yaml
datasets/data_connector/conda/conda_recipe/: meta.yaml
datasets/data_connector/conda/recipe/: meta.yaml
datasets/data_connector/data_connector/aws/: README.md  connector.py  downloader.py  uploader.py
datasets/data_connector/data_connector/azure/: AzureML.md  README.md  __init__.py  connector.py  downloader.py  uploader.py
datasets/data_connector/data_connector/gcp/: README.md  __init__.py  connector.py  downloader.py  query.py  uploader.py
datasets/data_connector/data_connector/int/: int_connector.py  int_downloader.py  int_uploader.py
datasets/data_connector/docker/: Dockerfile  build_data_connector.DockerFile  data_connector_azure_connector.Dockerfile
datasets/data_connector/docs/: build.md
datasets/data_connector/samples/: .gitignore
datasets/data_connector/samples/aws/: Readme.md  download_file.py  functional_test.py  list_blobs.py  upload_file.py
datasets/data_connector/samples/azure/: .env.sample  .gitignore  azureml_sample.py  blob_sample.py  readme.md  requirements.txt
datasets/data_connector/samples/azure/src/: main.py
datasets/data_connector/samples/gcp/: bigquery.py  storage.py
datasets/data_connector/samples/interoperability/: .gitignore  Interoperability.ipynb  README.md  requirements.txt  setup.ps1  setup.sh
datasets/data_connector/tests/: __init__.py
datasets/data_connector/tests/aws/: conftest.py  test_aws_s3_connector.py
datasets/data_connector/tests/azure/: .env  .gitignore  test_connector.py  test_downloader.py  test_uploader.py
datasets/data_connector/tests/gcp/: conftest.py  test_connector.py  test_downloader.py  test_query.py  test_upploader.py
datasets/dataset_api/: .gitignore  MANIFEST.in  README.md  dataset.py  datasets_urls.json  pyproject.toml  requirements.txt  setup.py  setup.sh  terms_and_conditions.txt  third-party-programs.txt
datasets/dataset_api/conda/: description.md
datasets/dataset_api/conda/recipe/: meta.yaml
datasets/dataset_api/conda/recipes/py38_recipe/: meta.yaml
datasets/dataset_api/conda/recipes/py39_recipe/: meta.yaml
datasets/dataset_api/dataset_api/: download.py  preprocess.py
datasets/dataset_api/scripts/brca/: create_data_split.py  prepare_nlp_data.py  prepare_vision_data.py
datasets/dataset_api/src/dataset_librarian/: dataset.py
datasets/dataset_api/src/dataset_librarian/dataset_api/: download.py  preprocess.py
docs/notebooks/low_precision_optimization/tensorflow/: .gitignore  README.md  format2json.py  inc_for_tensorflow.ipynb  inc_quantize_model.py  local_banchmark.sh  local_benchmark.sh  lpot_for_tensorflow.ipynb  lpot_quantize_model.py  pyproject.toml  requirements.txt  resnet50_v1.yaml  run_jupyter.sh  set_env.sh  tips.md  ut.sh
docs/notebooks/transfer_learning/: README.md  plot_utils.py  pyproject.toml  requirements.txt  run_tl_notebooks.sh  setup.md
docs/notebooks/transfer_learning/bert_classifier_fine_tuning/: README.md
docs/notebooks/transfer_learning/huggingface_image_classification/: README.md
docs/notebooks/transfer_learning/image_classification/huggingface_image_classification/: HuggingFace_Image_Classification_Transfer_Learning.ipynb
docs/notebooks/transfer_learning/image_classification/pytorch_image_classification/: PyTorch_Image_Classification_Transfer_Learning.ipynb  README.md  model_utils.py
docs/notebooks/transfer_learning/image_classification/tf_image_classification/: Image_Classification_Transfer_Learning.ipynb  README.md  model_util.py
docs/notebooks/transfer_learning/object_detection/pytorch_object_detection/: PyTorch_Object_Detection_Transfer_Learning.ipynb  README.md  dataset_utils.py  model_utils.py
docs/notebooks/transfer_learning/pytorch_image_classification/: PyTorch_Image_Classification_Transfer_Learning.ipynb  README.md  model_utils.py  requirements.txt
docs/notebooks/transfer_learning/pytorch_object_detection/: .gitignore  PyTorch_Object_Detection_Transfer_Learning.ipynb  README.md  dataset_utils.py  model_utils.py  requirements.txt
docs/notebooks/transfer_learning/pytorch_text_classification/: PyTorch_Text_Classifier_fine_tuning.ipynb  PyTorch_Text_Classifier_fine_tuning_using_IMDb.ipynb  README.md  requirements.txt  utils.py
docs/notebooks/transfer_learning/pytorch_text_generation/: PyTorch_LLM_Instruction_Tuning.ipynb  README.md  llm_utils.py
docs/notebooks/transfer_learning/question_answering/: BERT_Question_Answering.ipynb  bert_qa_utils.py
docs/notebooks/transfer_learning/text_classification/bert_classifier_fine_tuning/: BERT_Classifier_fine_tuning_using_IMDB.ipynb  README.md  imdb.yaml  quantize.py
docs/notebooks/transfer_learning/text_classification/pytorch_text_classification/: PyTorch_Text_Classifier_fine_tuning.ipynb  README.md
docs/notebooks/transfer_learning/text_classification/tfhub_bert_text_classification/: BERT_Binary_Text_Classification.ipynb  (+3 more)
docs/notebooks/transfer_learning/tf_image_classification/: Image_Classification_Transfer_Learning.ipynb  README.md  model_util.py
docs/notebooks/transfer_learning/tfhub_bert/: BERT_Binary_Text_Classification.ipynb  BERT_Question_Answering.ipynb  README.md  bert_qa_utils.py  bert_utils.py  tfhub_bert_model_map_qa.json
docs/notebooks/transfer_learning/tfhub_classifier_food101/: Food101_Transfer_Learning.ipynb  README.md
(+6146 files in other folders)
