[project]
name = "root"
version = "3.4"
description = "AIRM - root"
authors = [
    {name = "Intel(R) AI Reference Models",email = "ai.reference.models@intel.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.11"
dependencies = [
    "atheris (>=2.3.0,<3.0.0)",
    "conditional (>=2.0,<3.0)",
    "flake8 (==3.7.5)",
    "mock (>=5.1.0,<6.0.0)",
    "tox (==4.24.2)",
    "virtualenv (>=20.29.2,<21.0.0)",
    "pytest (==7.2.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "intel-optimization-for-horovod (==0.28.1.4)",
    "numpy (==1.24.0)",
    "pytest-xdist (>=3.6.1,<4.0.0)",
    "pubmed-parser (>=0.5.1,<0.6.0)",
    "keras (==3.9.0)",
    "torch (==2.7.0)",
    "requests (==2.32.4)",
    "urllib3 (==2.5.0)",
    "transformers (==4.51.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
