[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset_librarian"
version = "1.0.2"
requires-python = ">=3.9,<3.11"
authors = [
    { name="IntelAI", email="IntelAI@intel.com"}
]
description = "Dataset librarian is a tool to download and apply the preprocessing needed for the list of supported datasets"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "tqdm",
    "docx2txt",
    "openpyxl",
    "pillow",
    "scikit-learn-intelex",
    "python-dotenv",
    "wget"
]
