[tool.poetry]
name = "docs-notebook-transfer-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
accelerate = "^0.34.2"
charset-normalizer = "^3.3.2"
datasets = "^3.0.0"
evaluate = "^0.4.3"
fsspec = "2024.6.1"
gin-config = "^0.5.0"
intel-extension-for-pytorch = "^2.4.0"
tensorflow = "^2.17.0"
ipython-genutils = "^0.2.0"
ipython = "^8.27.0"
ipywidgets = "^8.1.5"
jmespath = "^1.0.1"
matplotlib-inline = "^0.1.7"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.2"
pillow = "^10.4.0"
psutil = "^6.0.0"
pycocotools = "^2.0.8"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
sentencepiece = "^0.2.0"
tensorflow-addons = "^0.23.0"
tensorflow-datasets = "^4.9.6"
tensorflow-hub = "^0.16.1"
tf-models-official = "^2.17.0"
torch = "2.7.0"
torchvision = "0.22.0"
transformers = "^4.48.0"
urllib3 = "^2.5.0"
wget = "^3.2"
tornado = "6.5.0"
requests = "2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
