[tool.poetry]
name = "docs-notebooks-low-precision-optimization-tensorflow"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Clayne B Robison clayne.b.robison@intel.com", "Srikanth Ramakrishna srikanth.ramakrishna@intel.com"]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.17.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
runipy = "^0.1.5"
wheel = "^0.44.0"
h11 = "0.16.0"
tornado = "6.5.0"
keras = "3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
