[tool.poetry]
name = "pyt-swin-transformer-inf-gpu"
version = "0.1.0"
description = ""
authors = ["Robison, Clayne B <clayne.b.robison@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
requests = "^2.32.3"
termcolor = "1.1.0"
yacs = "0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
