[tool.poetry]
name = "pyt-yolov5-inf-gpu"
version = "0.1.0"
description = ""
authors = ["Robison, Clayne B <clayne.b.robison@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = ">=7.1.2"
pyyaml = ">=5.3.1"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"
opencv-python = ">=4.1.1"
protobuf = "^5.28.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
tqdm = ">=4.64.0"
tensorboard = ">=2.4.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
argparse = "^1.4.0"
ipython = "^8.27.0"
onnx = "^1.16.2"
psutil = "^6.0.0"
thop = ">=0.1.1"
torchsummary = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
