[tool.poetry]
name = "tf-maskrcnn-trn-gpu"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "^4.10.0.84"
pybind11 = "^2.13.6"
pycocotools = "^2.0.8"
dllogger = { git = "https://github.com/NVIDIA/dllogger.git" }
intel-optimization-for-horovod = "^0.28.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
