[project]
name = "models-v2-tensorflow-resnet50v1-5-training-gpu"
version = "3.4"
description = "Intel(R) AI Reference Models - models_v2-tensorflow-resnet50v1_5-training-gpu"
authors = [
    {name = "Intel(R) AI Reference Models",email = "ai.reference.models@intel.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "gin (>=0.1.6,<0.2.0)",
    "gin-config (>=0.5.0,<0.6.0)",
    "intel-optimization-for-horovod (==0.28.1.4)",
    "protobuf (==4.25.8)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tensorflow-datasets (>=4.9.7,<5.0.0)",
    "tensorflow-model-optimization (>=0.8.0,<0.9.0)",
    "tf-keras (==2.15.0)",
    "tfa-nightly (>=0.23.0.dev20240415222534,<0.24.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
